Update sbt and plugins